sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Export_Definition__mdt/SFDC_Industry_Mapping_Export_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Contains the column configuration for exported .xlsx mapping files.</description>
    <label>SFDC Industry Mapping Export Definition</label>
    <pluralLabel>SFDC Industry Mapping Export Definitions</pluralLabel>
</CustomObject>