sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Export_Definition__mdt/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>The order in which this column should appear.</description>
    <inlineHelpText>The order in which this column should appear.</inlineHelpText>
    <label>Index</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>