sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Export_Definition__mdt/fields/Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Label_Name__c</fullName>
    <description>The name of the custom label for this column.</description>
    <inlineHelpText>The name of the custom label for this column.</inlineHelpText>
    <label>Label Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>