sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Export_Definition__mdt/fields/Wrapper_Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Wrapper_Attribute_Name__c</fullName>
    <description>The name of the field from the respective wrapper object to grab data from.</description>
    <inlineHelpText>The name of the field from the respective wrapper object to grab data from.</inlineHelpText>
    <label>Wrapper Attribute Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>