sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Export_Definition__mdt/fields/Wrapper_Object__c.field-meta.xml
<CustomField>
    <fullName>Wrapper_Object__c</fullName>
    <description>Which wrapper object the data for this column exists</description>
    <inlineHelpText>Which wrapper object the data for this column exists</inlineHelpText>
    <label>Wrapper Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Object-Level</fullName>
                <default>true</default>
                <label>Object-Level</label>
            </value>
            <value>
                <fullName>Field-Level</fullName>
            </value>
            <value>
                <fullName>Field-Level (New Field Details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>