sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Export_Definition__mdt/listViews/All_Columns.listView-meta.xml
<ListView>
    <fullName>All_Columns</fullName>
    <columns>Index__c</columns>
    <columns>MasterLabel</columns>
    <columns>Label_Name__c</columns>
    <columns>Wrapper_Object__c</columns>
    <columns>Wrapper_Attribute_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Columns</label>
    <language>en_US</language>
</ListView>